// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI/StaffAvatar should render StaffAvatar 1`] = `
<img
  className="avatar"
  src="https://center.yandex-team.ru/user/avatar/Login/100/square"
/>
`;

exports[`UI/StaffAvatar should render StaffAvatar with big size 1`] = `
<img
  className="avatar"
  src="https://center.yandex-team.ru/user/avatar/Login/200/square"
/>
`;
